--- a/.github/workflows/build_python_wheels.yml
+++ b/.github/workflows/build_python_wheels.yml
@@ -1,13 +1,6 @@
 name: Build Linux Python Wheels
 
-on:
-  push:
-    branches:
-      - master
-      - 'releases/**'
-  pull_request:
-    branches:
-      - master
+on: [push]
 
 
 jobs:
@@ -19,11 +12,7 @@ jobs:
     strategy:
       matrix:
         config:
-        - { version: 3.5, base_path: /opt/python/cp35-cp35m/, include_dir_name: python3.5m/, experimental: false }
-        - { version: 3.6, base_path: /opt/python/cp36-cp36m/, include_dir_name: python3.6m/, experimental: false }
-        - { version: 3.7, base_path: /opt/python/cp37-cp37m/, include_dir_name: python3.7m/, experimental: false }
-        - { version: 3.8, base_path: /opt/python/cp38-cp38/, include_dir_name: python3.8/, experimental: false }
-        - { version: 3.9, base_path: /opt/python/cp39-cp39/, include_dir_name: python3.9/, experimental: false }
+        - { version: "3.10", base_path: /opt/python/cp310-cp310/, include_dir_name: python3.10/, experimental: false }
     steps:
       # v1 must be used because newer versions require a node.js version that will not run on this old image.
       - uses: actions/checkout@v1
@@ -37,34 +26,3 @@ jobs:
         with:
           name: wheel_${{ matrix.config.version }}
           path: audit_output/
-  test:
-    needs: build
-    container:
-      image: python:${{ matrix.config.version }}
-    runs-on: ubuntu-latest
-    continue-on-error: ${{ matrix.config.experimental }}
-    strategy:
-      matrix:
-        config:
-        - { version: 3.5, experimental: false }
-        - { version: 3.6, experimental: false }
-        - { version: 3.7, experimental: false }
-        - { version: 3.8, experimental: false }
-        - { version: 3.9, experimental: false }
-    steps:
-      - uses: actions/checkout@v1
-      - name: Download Wheel
-        uses: actions/download-artifact@v1
-        with:
-          name: wheel_${{ matrix.config.version }}
-      - name: Test wheel
-        shell: bash
-        run: |
-          export wheel_files=(wheel_${{ matrix.config.version }}/*)
-          export wheel_file="${wheel_files[0]}"
-          echo Installing ${wheel_file}...
-          pip install -r requirements.txt
-          pip install pytest
-          pip install ${wheel_file}
-          python -m pytest ./python/tests/
-          python ./python/tests/run_doctest.py
